test_suite/tests/ui/inject_scope/unknown_scope.stderr
error[E0432]: unresolved import `dilib`
 --> $DIR/unknown_scope.rs:1:5
  |
1 | use dilib::{Singleton, Injectable};
  |     ^^^^^ use of undeclared crate or module `dilib`

error: cannot determine resolution for the derive macro `Injectable`
 --> $DIR/unknown_scope.rs:3:10
  |
3 | #[derive(Injectable)]
  |          ^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `inject` in this scope
 --> $DIR/unknown_scope.rs:5:7
  |
5 |     #[inject(scope="unique")]
  |       ^^^^^^
